--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -54,6 +54,23 @@
         "streambuf": "cpp",
         "typeinfo": "cpp",
         "variant": "cpp",
-        "nlopt.h": "c"
+        "nlopt.h": "c",
+        "complex": "cpp",
+        "cstring": "cpp",
+        "list": "cpp",
+        "map": "cpp",
+        "set": "cpp",
+        "hash_map": "cpp",
+        "fstream": "cpp",
+        "cfenv": "cpp",
+        "condition_variable": "cpp",
+        "unordered_set": "cpp",
+        "future": "cpp",
+        "mutex": "cpp",
+        "semaphore": "cpp",
+        "stop_token": "cpp",
+        "thread": "cpp",
+        "cinttypes": "cpp",
+        "valarray": "cpp"
     }
 }
